# taskwright-demo

./: .gitignore  README.md  pyproject.toml
demo/: app.py  plots.py  runs_loader.py
scripts/: run_t12_retention.py  run_t1_segmentation.py  run_t2_churn.py  run_t4_dota2.py  run_t4_lol.py
tasks/: _common.py
tasks/t12_retention/: sessions.py  test_sessions.py
tasks/t1_segmentation/: online_gaming.py  test_online_gaming.py
tasks/t2_churn/: cookie_cats.py  test_cookie_cats.py
tasks/t4_win_prediction/: dota2.py  lol.py  test_dota2.py  test_lol.py
