[tool.poetry]
# Apробация-репозиторий: использует taskwright как внешнюю зависимость, сам пакетом не является.
name = "taskwright-demo"
version = "0.1.0"
description = "Apробация taskwright на открытых игровых датасетах: эталонные реализации контрактов, прогоны, материал для графиков."
authors = ["zommer <zommer.03@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# taskwright берётся из соседнего репозитория в editable-режиме (его НЕ редактируем).
taskwright = { path = "../taskwright", develop = true }
pandas = ">=2.0"
numpy = ">=1.24"
scikit-learn = ">=1.3"
matplotlib = ">=3.7"
joblib = ">=1.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.pytest.ini_options]
testpaths = ["tasks"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
